Feat(Scan) : Add fridge detection scan flow